# FarsiAssistant

./: .replit  Pipfile  bot.py  bot_new.py  gunicorn.conf.py  main.py  models.py  pyproject.toml  requirements.txt  reservations.json  simple_bot.py
attached_assets/: Pasted-Traceback-most-recent-call-last-File-app-main-py-line-6-in-module-from-bot-new-1745464663906.txt  Pasted-import-asyncio-import-logging-import-json-from-jdatetime-import-date-as-JalaliDate-from-telegram-1745449578803.txt
