[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jdatetime>=5.2.0",
    "nest-asyncio>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[job-queue]==13.7",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "twilio>=9.5.2",
]
